feat: Upgrade Vercel configuration to version 3 and adjust build settings

--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,16 @@
 {
-  "version": 2,
+  "version": 3,
   "builds": [
     {
-      "src": "package.json",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "dist/public/**",
-      "use": "@vercel/static"
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "../dist/public" }
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/server/index.ts"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/dist/public/$1"
+      "dest": "/$1"
     }
-  ],
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist/public"
+  ]
 }
