--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "rest-express",
+  "name": "yearbook",
+  "homepage": "https://ucupp19.github.io/yearbook-tkj2",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
@@ -8,7 +9,9 @@
     "build": "vite build",
     "start": "vite preview",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist/public"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -54,6 +57,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
+    "gh-pages": "^6.3.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
@@ -97,6 +101,7 @@
     "cross-env": "^7.0.3",
     "drizzle-kit": "^0.30.4",
     "esbuild": "^0.25.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
